// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    name="text"
    onChange={[Function]}
    type="text"
    value=""
  />
  <input
    type="submit"
  />
</form>
`;

exports[`typing a value and submitting the form will result in a new tweet: empty input 1`] = `
<TweetWritingForm
  addTweet={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "date": "2018-09-23T15:31:48.158Z",
            "message": "Hello World!",
            "userId": "muhdiekuh",
          },
        ],
      ],
    }
  }
  userId="muhdiekuh"
>
  <form
    onSubmit={[Function]}
  >
    <input
      name="text"
      onChange={[Function]}
      type="text"
      value=""
    />
    <input
      type="submit"
    />
  </form>
</TweetWritingForm>
`;

exports[`typing a value and submitting the form will result in a new tweet: field filled 1`] = `
<TweetWritingForm
  addTweet={[MockFunction]}
  userId="muhdiekuh"
>
  <form
    onSubmit={[Function]}
  >
    <input
      name="text"
      onChange={[Function]}
      type="text"
      value="Hello World!"
    />
    <input
      type="submit"
    />
  </form>
</TweetWritingForm>
`;
